--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -3,7 +3,7 @@
   contents:
     - name: Name
       value: Malinda Tantirigama PhD
-    - name: Summary
+    - name: 
       value: Dedicated academic professional with 10 years of experience, adept at leveraging programming expertise for data acquisition, analysis, visualisation, and reporting
 
 - title: Experience
@@ -27,7 +27,7 @@
     - <u>Matlab:</u> Statistics and Machine Learning, Curve Fitting, Signal Processing, App designer
     - <u>Microsoft Suite:</u> Word, Excel, PowerPoint, Power BI 
     - <u>Adobe Suite:</u> Illustrator, Photoshop, Premier
-    - <u>Version control:</u> Github
+    - <u>fa-solid fa-hashtag Version control:</u> Github
  
 - title: Education
   type: time_table
