--- a/_config.yml
+++ b/_config.yml
@@ -283,8 +283,8 @@ display_categories: ["blockquotes"] # these categories will be displayed on the 
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Tantirigama]
+  first_name: [Malinda, MLS, Malinda LS]
 
   style: apa
   locale: en
